--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   get_it: ^8.0.3
   cached_network_image: ^3.4.1
   intl: ^0.20.2
+  firebase_core: ^3.12.0
+  firebase_storage: ^12.4.3
+  firebase_app_check: ^0.3.2+4
+  image_picker: ^1.1.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
