--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^3.12.0
   firebase_storage: ^12.4.3
   firebase_app_check: ^0.3.2+4
+  cloudinary_flutter: ^1.0.0
+  cloudinary_url_gen: ^1.0.0
   image_picker: ^1.1.2
   shared_preferences: ^2.5.2
 
