--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloudinary_url_gen: ^1.0.0
   image_picker: ^1.1.2
   shared_preferences: ^2.5.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
