--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.5.2
   uuid: ^4.5.1
+  awesome_dialog: ^3.2.1
 
 dev_dependencies:
   flutter_test:
