--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   get: ^4.7.2
   http: ^1.3.0
   get_storage: ^2.1.1
-  get_it: ^8.0.3
+  get_it: ^8.0.2
   cached_network_image: ^3.4.1
   intl: ^0.20.2
   firebase_core: ^3.12.0
@@ -50,6 +50,8 @@ dependencies:
   uuid: ^4.5.1
   awesome_dialog: ^3.2.1
   simple_barcode_scanner: ^0.3.0
+  sqflite: ^2.4.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
