--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   simple_barcode_scanner: ^0.3.0
   sqflite: ^2.4.1
   path: ^1.9.0
+  logging: ^1.3.0
 
 dev_dependencies:
   flutter_test:
