--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   logging: ^1.3.0
+  fl_chart: ^0.70.2
+  pdf: ^3.11.3
+  open_file: ^3.5.10
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
