--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,11 @@ flutter:
    - assets/icons/
    - assets/product_images/
 
+  fonts:
+    - family: Open Sans
+      fonts:
+        - asset: assets/Open_Sans/OpenSans-VariableFont.ttf
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
