Create new search screen, and fix the loading circle

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   pdf: ^3.11.3
   open_file: ^3.5.10
   printing: ^5.14.2
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
