--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   open_file: ^3.5.10
   printing: ^5.14.2
   permission_handler: ^11.4.0
+  flutter_native_splash: ^2.4.4
+  flutter_typeahead: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -86,11 +88,20 @@ flutter:
   assets:
    - assets/icons/
    - assets/product_images/
+   - assets/splash_screen/splash_screen.png
+   - assets/masterpro_logo.png
 
   fonts:
     - family: Open Sans
       fonts:
         - asset: assets/Open_Sans/OpenSans-VariableFont.ttf
+
+flutter_native_splash:
+  color: "#2F98F5" # Background color of splash screen
+  image: assets/masterpro_logo.png # Your app logo (must be inside assets folder)
+  android_12:
+    color: "#2F98F5"
+    image: assets/masterpro_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
