--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   logging: ^1.3.0
+  logger: ^2.5.0
   fl_chart: ^0.70.2
   pdf: ^3.11.3
   open_file: ^3.5.10
@@ -60,6 +61,7 @@ dependencies:
   permission_handler: ^11.4.0
   flutter_native_splash: ^2.4.4
   flutter_typeahead: ^5.2.0
+  flutter_gemini: ^3.0.0
 
 dev_dependencies:
   flutter_test:
